Remove use of Lombok