@@ -16,12 +16,12 @@
 package bean;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import com.darwino.commons.util.StringUtil;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Named;
-import lombok.SneakyThrows;
 
 /**
  * This bean is intended to be a JSP utility bean for text encoding.
@@ -37,12 +37,11 @@ public class EncoderBean {
 	 * @param value the value to URL-encode
 	 * @return the URL-encoded value
 	 */
-	@SneakyThrows
 	public String urlEncode(final String value) {
 		if(StringUtil.isEmpty(value)) {
 			return StringUtil.EMPTY_STRING;
 		} else {
-			return URLEncoder.encode(value, StringUtil.UTF_8.name());
+			return URLEncoder.encode(value, StandardCharsets.UTF_8);
 		}
 	}
 }
